examples/errors/pop.avm
push float(4.5)
push int32(34)
pop
pop
pop
